[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/font/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="BlueScore" type="Label" parent="."]
modulate = Color( 0, 0.541176, 1, 1 )
anchor_left = 0.049
anchor_top = 0.044
anchor_right = 0.1
anchor_bottom = 0.044
custom_fonts/font = SubResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GreenScore" type="Label" parent="."]
modulate = Color( 0, 1, 0.415686, 1 )
anchor_left = 0.945
anchor_top = 0.044
anchor_right = 0.945
anchor_bottom = 0.044
grow_horizontal = 0
custom_fonts/font = SubResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -184.0
margin_top = -36.0
margin_right = 186.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 1 )
text = "Get Ready!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlueScoreTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="GreenScoreTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="GetReadyTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true
[connection signal="timeout" from="BlueScoreTimer" to="." method="_on_BlueScoreTimer_timeout"]
[connection signal="timeout" from="GreenScoreTimer" to="." method="_on_GreenScoreTimer_timeout"]
[connection signal="timeout" from="GetReadyTimer" to="." method="_on_GetReadyTimer_timeout"]
